--- a/Libro.tex
+++ b/Libro.tex
@@ -1909,7 +1909,7 @@ Secondo il National Institute on Aging e il Surgeon General degli Stati Uniti, l
 Immaginate di poter stringere un patto con un demone che vi promettere di avere tutto! Tutto il mondo e ogni cosa al suo interno, oltre a essere belli, intelligenti e simpatici, ma se accettate il mondo verrà svuotato di ogni essere umano.
 Accettereste? Probabilmente no, ed è per questo che, buona parte dei nostri pensieri ruota attorno alle nostre relazioni.
 
-Ma finché al mondo c'è qualcuno che ci tiene a te, Ricorda se puoi quello è il bene più grande che hai - Neffa
+Finché al mondo c'è qualcuno che ci tiene a te, ricorda se puoi quello è il bene più grande che hai - Neffa
 
 Quindi è probabile che tutti abbiamo bisogno di relazioni sociali, alcuni però hanno bisogno solo di una cerchia ristretta di amici,
 altri di gruppi più numerosi.
@@ -3778,31 +3778,12 @@ attività vi interrompono continuamente dal vostro lavoro facendo calare la vost
 \end{itemize}
 \end{mdframed}
 
-
-
-
-
-
-
-
-
-
 \subsection{Immigrazione e diritti civili}
 
-\subsubsection{Immigrazione e economia}
-Per cercare di farmi un idea sull'impatto dell'immigrazione sull'economia ho cercato nei database scientifici. Contrariamente a quello che potevo immaginare, gli studi che ho trovato sembrano concordare sull'impatto positivo portato dall'immigrazione\endnote{\raggedright\url{https://ideas.repec.org/p/mse/cesdoc/13013.html}} \endnote{\raggedright\url{http://www.econstor.eu/handle/10419/94445}} \endnote{\raggedright\url{https://foreignpolicy.com/2019/11/01/immigration-wall-open-borders-trillion-dollar-idea/}}.
+Analisi sugli studi di settore riguardanti l'impatto economico dell'immigrazione rivelano un quadro piuttosto omogeneo. Nonostante il dibattito pubblico sia spesso polarizzato, i dati disponibili concordano tendenzialmente nel sottolineare il contributo positivo dei flussi migratori alla crescita economica\endnote{\raggedright\url{https://ideas.repec.org/p/mse/cesdoc/13013.html}} \endnote{\raggedright\url{http://www.econstor.eu/handle/10419/94445}} \endnote{\raggedright\url{https://foreignpolicy.com/2019/11/01/immigration-wall-open-borders-trillion-dollar-idea/}}.
 
-Un'ampia maggioranza, stimata intorno al 96\% degli economisti del lavoro, concorda sul fatto che i benefici netti dell'immigrazione superino i costi\endnote{\raggedright\url{http://dx.doi.org/10.1257/jep.25.3.83}}, rispecchiando un consenso significativo nella letteratura economica. Le posizioni che indicano un danno economico prevalente sono, in genere, meno rappresentate nella ricerca accademica e spesso oggetto di revisioni e dibattiti scientifici\endnote{\raggedright\url{https://www.foreignaffairs.com/reviews/review-essay/2013-12-16/let-people-go}}.
-
-Il Centro Nazionale Francese per la Ricerca Scientifica, dell'Università Clermont-Auvergne e di Paris-Nanterre, usando i
-dati economici di 15 diverse città dell'Europa Occidentale, tra cui l'Italia, raccolti tra il 1985
-e il 2015\endnote{\raggedright\url{http://advances.sciencemag.org/content/4/6/eaaq0883}}, hanno riscontrato che i migranti permanenti hanno avuto un impatto
-positivo sul PIL, è aumentato sensibilmente, il tasso di disoccupazione è sceso e, la
-spesa pubblica relativa al peso economico dei rifugiati ha reso ben più consistente il guadagno sotto forma di
-tasse.\endnote{\raggedright\url{https://www.ted.com/talks/nick_hanauer_the_dirty_secret_of_capitalism_and_a_new_way_forward/up-next}}
-
-Questi effetti sono visibili in un periodo compreso indicativamente tra i tre e i sette
-anni, quando alcuni di loro diventeranno cittadini a tutti gli effetti.
+Circa il 96\% degli economisti del lavoro, concordano che i benefici dell'immigrazione superino i costi\endnote{\raggedright\url{http://dx.doi.org/10.1257/jep.25.3.83}} \endnote{\raggedright\url{https://www.foreignaffairs.com/reviews/review-essay/2013-12-16/let-people-go}} \endnote{\raggedright\url{http://advances.sciencemag.org/content/4/6/eaaq0883}}. I risultati hanno evidenziato che i migranti permanenti hanno avuto un impatto positivo sul PIL (circa 139 miliardi di euro all'anno, quasi il 9\% del totale), riducendo leggermente il tasso di disoccupazione (1,2 nuovi posti di lavoro), senza riduzioni significative di salario per la forza lavoro locale
+\endnote{\raggedright\url{http://www.voxeu.org/article/how-immigrants-and-job-mobility-help-low-skilled-workers}}.
 
 \needspace{4cm}
 \begin{figure}[H]
@@ -3810,71 +3791,33 @@ anni, quando alcuni di loro diventeranno cittadini a tutti gli effetti.
   \includegraphics[width=0.95\linewidth]{images/Libro-img057.jpg}
 \end{figure}
 
-Secondo il ministero dell'Economia, un aumento della speranza di vita può ridurre la crescita del debito pubblico di 6 punti percentuali. Al contrario, una diminuzione della fertilità potrebbe far crescere il debito di circa 10 punti percentuali entro il 2070. Un aumento del 33\% dell'immigrazione potrebbe ridurre il debito pubblico rispetto al PIL di 35 punti percentuali nel 2070, mentre una diminuzione del 33\% degli immigrati potrebbe farlo aumentare di circa 45 punti.
+Secondo il ministero dell'Economia, un aumento della speranza di vita può ridurre la crescita del debito pubblico di 6 punti percentuali. Al contrario, una diminuzione della fertilità potrebbe far crescere il debito di circa 10 punti percentuali entro il 2070. Un aumento del 33\% dell'immigrazione potrebbe ridurre il debito pubblico rispetto al PIL di 35 punti percentuali nel 2070, mentre una diminuzione del 33\% degli immigrati potrebbe farlo aumentare di circa 45 punti. 
 
-L’immigrazione, inoltre, non è solo una questione di numeri o di impatto economico, ma riflette anche squilibri legati allo sfruttamento delle risorse nei Paesi d’origine, in cui l’Occidente ha avuto un ruolo determinante.
+Tito Boeri, ex presidente dell'INPS, Durante un intervento alla Camera dei Deputati nel 2018, affermò che: “Senza immigrati l’INPS sarebbe in grossa difficoltà.”
 
-\subsubsection{Immigrazione e lavoro}
-Confrontando i dati sui salari, occupazione\endnote{\raggedright\url{http://www.voxeu.org/article/how-immigrants-and-job-mobility-help-low-skilled-workers}} è stato notato che l'immigrazione non comporti perdite di posti di lavoro significative né riduzioni salariali diffuse per la forza lavoro locale. Gli impatti, positivi o negativi, sono generalmente lievi e localizzati\endnote{\raggedright\url{http://www.nber.org/papers/w21123}} \endnote{\raggedright\url{http://www.voxeu.org/article/immigration-trade-and-productivity-services}} \endnote{Burchardi et al., 2020\raggedright\url{https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3582182}} \endnote{Penn Wharton Budget Model, 2016 \raggedright\url{https://budgetmodel.wharton.upenn.edu/issues/2016/1/27/the-effects-of-immigration-on-the-united-states-economy}} \endnote{Longhi et al., 2004 \raggedright\url{https://ideas.repec.org/p/wai/pscdps/dp-47.html}}.
+Ci sono poi diversi casi di lavoratori stranieri che vengono assunti in nero: una condizione che impedisce loro di contribuire regolarmente al sistema previdenziale. Tuttavia, questa responsabilità ricade principalmente sul datore di lavoro, più che sul lavoratore stesso.
 
-Oltre che essere lavoratori, consumatori e contributori gli immigrati possono diventare imprenditori e creare nuovi
-posti di lavoro.
-Secondo fonti recenti, in Italia circa il 10\% delle imprese (in numero) è gestito da imprenditori stranieri.
-Gli stranieri in Italia, sia imprenditori che dipendenti, producono un PIL di 139 miliardi di euro all'anno, quasi il 9\% del
-totale. Quindi grazie all'imprenditorialità straniera si generano 1,2 nuovi posti di lavoro. 
+Nel dibattito pubblico, l’espressione “migranti economici” viene spesso usata in modo distorto, con l’intento di delegittimare chi emigra per migliorare le proprie condizioni di vita. Si suggerisce che queste persone non fuggano dalla povertà, ma siano mosse dall’avidità o da un desiderio di arricchimento.
+Una persona che elemosina e rifiuta il cibo che offri, preferendo dei soldi, non significa necessariamente che se ne stia approfittando. Magari ha già ricevuto abbastanza cibo durante la giornata e ora ha bisogno di soldi per pagare il gas, la luce, le bollette o l’affitto.
 
-Tito Boeri, ex presidente dell'INPS, Durante un intervento alla Camera dei Deputati nel 2018, affermò che:
+Perché un occidentale che emigra per lavoro è un “cervello in fuga” o una persona ambiziosa, mentre un immigrato viene spesso visto come un invasore o un approfittatore? Difficilmente qualcuno rischierebbe la vita in un viaggio estremo se non fosse spinto da condizioni intollerabili.
+Inoltre le attività economiche delle potenze occidentali, come l’estrazione di materie prime in queste regioni, hanno conteibuito a condizioni socio-economiche che favoriscono i flussi migratori.
 
-“Senza immigrati l’INPS sarebbe in grossa difficoltà. I contributi versati dagli immigrati regolari sono fondamentali per sostenere il sistema pensionistico italiano.”
+Più di un italiano su tre dichiara di percepire una bassa sicurezza nella zona in cui abita, anche per via dell'immigrazione\endnote{\raggedright\url{https://public.tableausoftware.com/views/denunce-2016/Dashboard7?:embed=y\&:toolbar=no\&:display\_count=no\&:showVizHome=no}}.
 
-Ci sono poi diversi casi di lavoratori stranieri che vengono assunti in nero: una condizione che impedisce loro di contribuire regolarmente al sistema previdenziale. Tuttavia, questa responsabilità ricade principalmente sul datore di lavoro, non sul lavoratore stesso.
+Secondo dati Istat\endnote{\raggedright\url{http://dati.istat.it/index.aspx?queryid=3846} } i crimini diffusi come furti e danneggiamenti sono in calo, invece sono in aumento le truffe informatiche\endnote{\raggedright\url{https://public.tableau.com/views/denunce-2016/Dashboard6?:embed=y\&:display\_count=n\&:toolbar=n\&:origin=viz\_share\_link}}.
 
-Nel dibattito pubblico, l’espressione “migranti economici” viene spesso usata in modo distorto, con l’intento di sminuire o delegittimare chi emigra per migliorare le proprie condizioni di vita. Si suggerisce che queste persone non fuggano dalla povertà, ma siano mosse dall’avidità o da un desiderio di arricchimento.
-Ad esempio, se una persona davanti al supermercato chiede qualcosa da mangiare e tu le offri del cibo, ma lei ti risponde che preferisce dei soldi, non significa necessariamente che stia mentendo o approfittando. Magari ha già ricevuto abbastanza cibo durante la giornata e ora ha bisogno di soldi per pagare il gas, la luce, le bollette o l’affitto.
-
-Tornando ai migranti economici, non è forse la stessa dinamica che porta molti occidentali a trasferirsi all’estero in cerca di migliori opportunità? Perché, allora, un italiano che emigra per lavoro viene visto come un “cervello in fuga” o una persona ambiziosa, mentre un immigrato viene spesso visto come un invasore o un approfittatore? Difficilmente qualcuno rischierebbe la vita in un viaggio estremo se non è spinto da condizioni intollerabili. Etichettarli come 'migranti economici' è riduttivo e spesso ingiusto.
-Inoltre le attività economiche delle potenze occidentali, come l’estrazione di materie prime in queste regioni, possono contribuire a condizioni socio-economiche che favoriscono i flussi migratori.
-
-Contrariamente alla credenza comune secondo cui l'emigrazione di lavoratori altamente qualificati danneggerebbe i Paesi in via di sviluppo, una ricerca dell'Università di San Diego suggerisce che in realtà possa trasformarsi in un beneficio per entrambe le nazioni coinvolte. Analizzando i flussi migratori verso gli Stati Uniti da Paesi come l'India o le Filippine, gli studiosi hanno osservato che i migranti istruiti non solo portano spesso nuove competenze al loro ritorno in patria, ma mantengono anche solidi legami professionali e scambi di informazioni con i colleghi rimasti a casa. Questo network internazionale agisce come un catalizzatore per l'innovazione e la crescita economica locale; un esempio concreto si riscontra nel settore informatico, dove l'incremento di lavoratori indiani negli USA ha paradossalmente stimolato un aumento significativo dell'occupazione nello stesso settore proprio in India.
-
-\subsubsection{Immigrazione e sicurezza}
-Più di un italiano su tre dichiara di percepire una bassa sicurezza nella zona in cui abita e, questa percezione è dovuta anche
-all'immigrazione che in Italia ha visto u aumento nel corso degli anni\endnote{\raggedright\url{https://public.tableausoftware.com/views/denunce-2016/Dashboard7?:embed=y\&:toolbar=no\&:display\_count=no\&:showVizHome=no}}.
-
-La gente teme che l'aumento d'immigrazione possa portare a dei problemi di
-ordine pubblico e, anche in questo caso, possiamo chiedere aiuto ai dati per vedere se dal 2014 ci sono stati aumenti
-di crimini.
-
-Grazie al lavoro dell'Istat\endnote{\raggedright\url{http://dati.istat.it/index.aspx?queryid=3846} } possiamo vedere
-che non abbiamo avuto un aumento della criminalità in generale, anzi, crimini diffusi tra cui furti e danneggiamenti
-sono in calo, in aumento invece le truffe informatiche su cui però non possiamo trovare una correlazione con
-l'immigrazione\endnote{\raggedright\url{https://public.tableau.com/views/denunce-2016/Dashboard6?:embed=y\&:display\_count=n\&:toolbar=n\&:origin=viz\_share\_link}}.
-
-Va però ricordato che stiamo analizzando le denunce, non i reati realmente commessi, le motivazioni per cui le due cose
-non vanno di pari passo sono molteplici, ad esempio come nella corruzione, riciclaggio, spaccio, i soggetti coinvolti,
-da entrambe le parti non hanno vantaggi a denunciare il reato, o per un crimine troppo piccolo, sfiducia nelle forze
-dell'ordine, sottostima del crimine e, la vergogna come nel caso di violenze sessuali.
-
-\begin{mdframed}[linewidth=1pt]
-Senza il denaro contante, la corruzione economica diventerebbe più complessa. Le alternative possibili sarebbero principalmente tre:
-
-\begin{itemize}
-\item Criptovalute e valute digitali: se utilizzate in modo anonimo — ad esempio tramite mixer o wallet non soggetti a procedure KYC (Know Your Customer) — possono svolgere un ruolo simile al contante.
-\item Beni di lusso e scambi in natura: oggetti di valore come orologi, automobili, opere d’arte, oppure favori personali come assunzioni, incarichi o altri vantaggi non monetari, possono essere usati per trasferire valore in modo non tracciabile.
-\item Fatture gonfiate e consulenze fittizie: si ricorre a strumenti legali in apparenza, come servizi professionali simulati o costi artificiosamente elevati, per mascherare pagamenti illeciti.
-\end{itemize}
-\end{mdframed}
+Va però ricordato che stiamo analizzando le denunce, non i reati realmente commessi, le motivazioni per cui le due cose non vanno di pari passo sono molteplici, ad esempio, per un crimine troppo piccolo, sfiducia nelle forze
+dell'ordine, sottostima del crimine o, la vergogna, come nel caso di violenze sessuali.
 
 Aumentando le persone in un paese, possono aumentare anche le possibilità di crimine, ma allo stesso modo, potrebbe succedere anche con un incremento della
-natalità, incoraggiata dallo stato.
+natalità.
 
-La percezione del numero totale di migranti può risultare deformata, infatti la percentuale di immigrati in Italia è del 9\%, una delle più basse in Europa, ma i sondaggi di Ipsos-Mori indicano che viene invece percepita come del 26\%, mentre la disoccupazione percepita al 49\% quando
-in realtà è al 12\%\endnote{\raggedright\url{https://www.ipsos.com/ipsos-mori/en-uk/perceptions-are-not-reality-things-world-gets-wrong}}.
+La percezione del numero totale di migranti può risultare deformata, infatti la percentuale di immigrati in Italia è del 9\%, una delle più basse in Europa, ma i sondaggi di Ipsos-Mori indicano che viene invece percepita attorno al 26\%\endnote{\raggedright\url{https://www.ipsos.com/ipsos-mori/en-uk/perceptions-are-not-reality-things-world-gets-wrong}}.
 
-Quando si hanno molti dati possono essere usati per favorire una narrazione e non sempre è semplice notare la forzatura.
-Ecco un esempio: Gli immigrati nelle carceri italiane sono 32\% mentre sul territorio sono circa il 9\%. Quindi gli immigrati delinquono più degli italiani.
+Quando si hanno molti dati possono essere usati per favorire una narrazione e non sempre è semplice notare la forzatura: Gli immigrati nelle carceri italiane sono 32\% mentre sul territorio sono circa il 9\%. Quindi gli immigrati delinquono più degli italiani.
 
-Associare carcere e criminalità è un'idea intuitiva, ma a noi non interessa sapere chi c'è dentro il carcere. A noi interessa sapere se gli stranieri sono un problema per la sicurezza. Quindi perché non cercare direttamente informazioni sulla criminalità invece di portare dati sulle carceri?
+Associare carcere e criminalità è un'idea intuitiva, ma a noi non interessa sapere chi c'è dentro il carcere. A noi interessa sapere se gli stranieri sono un problema per la sicurezza. Quindi perché non cercare direttamente informazioni sulla criminalità invece di riportare dati sulle carceri?
 
 Questo grafico mostra come negli ultimi 15 anni la criminalità in Italia continui a diminuire.
 
@@ -3934,49 +3877,35 @@ Questo grafico mostra come negli ultimi 15 anni la criminalità in Italia contin
 
 Come mai la popolazione carceraria non decresce allo stesso modo?
 
-La popolazione carceraria non è uguale alla popolazione che ha infranto la legge. Anche escludendo i reati che non
-prevedono la detenzione, dal conteggio sono comunque esclusi gli individui che hanno avuto accesso a misure alternative di
-detenzione, come lavori socialmente utili o gli arresti domiciliari. Gli stranieri che riescono ad ottenere queste
-misure alternative sono una minoranza, in quanto a volte non riescono a soddisfare i requisiti, come un domicilio o un lavoro stabile ecc…
+La popolazione carceraria non è uguale alla popolazione che ha infranto la legge. Anche escludendo i reati che non prevedono la detenzione, dal conteggio sono esclusi gli individui che hanno avuto accesso a misure alternative di
+detenzione, come lavori socialmente utili o gli arresti domiciliari. Gli stranieri che riescono ad ottenere queste misure alternative sono una minoranza, in quanto a volte non riescono a soddisfare i requisiti, come un domicilio o un lavoro stabile.
 
-Un'ulteriore problema è che guardare solamente il numero di carcerati non dice nulla sul reato commesso. Secondo dati Istat\endnote{\raggedright\url{https://www.istat.it/it/files/2015/03/detenuti-2015-1.pdf}} gli stranieri sono molto presenti per reati che vanno da zero a cinque anni mentre per reati maggiori troviamo più italiani.
+Inoltre non tutti i crimini hanno la stessa gravità. Secondo dati Istat\endnote{\raggedright\url{https://www.istat.it/it/files/2015/03/detenuti-2015-1.pdf}} gli stranieri sono piuttosto presenti per reati che vanno da zero a cinque anni, mentre calano per i reati maggiori.
 
-In Italia esiste il reato di clandestinità che un italiano non potrà compiere. 
-Questi sono solo alcuni esempi per dire che anche un dato vero, potrebbe non essere il corrispettivo del fenomeno che si vuole indagare e, suonando come ragionevole, risulta difficile non crederci.
-
-Per comparare meglio queste due popolazioni, potremmo farlo meglio dividendo tra immigrato regolare, quindi con gli stessi diritti di un italiano e, immigrato irregolare. Un immigrato irregolare non ha il diritto di lavorare, quindi quelli più
-bravi lavoreranno in nero. In situazioni di estrema difficoltà, la sopravvivenza e la ricerca di mezzi di sussistenza possono spingere le persone a muoversi nell'illegalità, quando le alternative legali sono precluse o insufficienti. Così il reato di immigrazione è spesso legato ad altro, che può andare dal lavoro in nero, fino allo spaccio. 
+Per comparare meglio queste due popolazioni, potremmo distinguere tra immigrato regolare, con gli stessi diritti di un italiano e, immigrato irregolare. Un immigrato irregolare non ha il diritto di lavorare, trovandosi così nel lavoro a nero, nel migliore dei casi. Nel peggiore dei casi, in situazioni di estrema difficoltà, la sopravvivenza e la ricerca di mezzi di sussistenza possono spingere le persone a muoversi nell'illegalità, quando le alternative legali sono precluse o insufficienti. 
 
 Sarebbe interessante trovare il dato che differenzi gli immigrati in regolari e irregolari, ma non è facile. Alcuni studi
-(Crocitti, 2014\endnote{\raggedright\url{https://www.oxfordhandbooks.com/view/10.1093/oxfordhb/9780199859016.001.0001/oxfordhb-9780199859016-e-029}}) osservano come la percentuale dei migranti irregolari nelle carceri vari tra il 60 e l'80\% a
-seconda del tipo di crimine. Secondo la ricerca sulla criminalità del Centro Studi e Ricerche Idos (F. Pittau, S.
-Trasatti 2009) nel 2005 in Italia di 550.590 denunce solamente il 37.709 erano di stranieri regolari, quindi solo il
+(Crocitti, 2014\endnote{\raggedright\url{https://www.oxfordhandbooks.com/view/10.1093/oxfordhb/9780199859016.001.0001/oxfordhb-9780199859016-e-029}}) osservano come la percentuale dei migranti irregolari nelle carceri vari tra il 60 e l'80\% a seconda del tipo di crimine. Secondo la ricerca sulla criminalità del Centro Studi e Ricerche Idos (F. Pittau, S. Trasatti 2009) nel 2005 in Italia di 550.590 denunce solamente il 37.709 erano di stranieri regolari, quindi solo il
 6.84\%\endnote{Marie - Pinotti, 2024\raggedright\url{https://www.aeaweb.org/articles?id=10.1257/jep.38.1.181}} \endnote{\raggedright\url{https://www.cambridge.org/core/journals/british-journal-of-political-science/article/terrorism-and-migration-an-overview/2D92D099D870D7D8E606C39E683D3E89}}.
 
 Perché allora non si mettono in regola gli immigrati? 
 
-Un primo problema l'abbiamo all'arrivo, molti migranti non hanno documenti o permessi per viaggiare legalmente in aereo perché difficile ottenere un visto dal paese di destinazione, costringendoli a tentare altre vie più pericolose. Quindi, sebbene possano acquistare un biglietto aereo, potrebbero essere intercettati dalle autorità di immigrazione all'aeroporto e respinti. Questo può portare i migranti a muoversi senza documenti d'identità, per paura di essere riconosciuti ed espulsi.
+Sebbene possano acquistare un biglietto aereo, può essere molto complicato ottenere un visto. Questo può portare i migranti a tentare altre vie più pericolose, muovendosi senza documenti d'identità, per paura di essere riconosciuti ed espulsi.
 
-A marzo 2021 in Italia sono state registrate 207 mila domande di regolarizzazione, ma di queste soltanto 1.480 sono
-giunte nella fase conclusiva: lo 0,7\% del totale. Anche una volta ottenuto il permesso, quando sarà scaduto ci si
-potrebbe trovare nella condizione di averne diritto, ma l'attesa renderà irregolare questa persona
-per un certo periodo di tempo. Inoltre l'immigrazione è regolata con la legge Bossi Fini, fatta molti anni fa, quando il fenomeno era molto diverso,
-che prevede l'ingresso di persone che abbiano già un contratto lavorativo prima di arrivare in Italia, un
+A marzo 2021 in Italia sono state registrate 207 mila domande di regolarizzazione, ma di queste soltanto 1.480 sono giunte nella fase conclusiva, lo 0,7\% del totale.  Una volta ottenuto un permesso, quando sarà scaduto ci si potrebbe trovare nella condizione di averne diritto, ma l'attesa renderà irregolare questa persona per un certo periodo di tempo. 
+
+L'immigrazione è regolata dalla legge Bossi Fini, di molti anni fa, che prevede l'ingresso di persone con un contratto lavorativo prima di arrivare in Italia, un
 requisito molto difficile da ottenere senza un colloquio di persona e senza conoscere bene la lingua. 
 Lo scrupolo burocratico per mantenere la sicurezza dello stato, rischia di ottenere l'effetto opposto.
 
-La regolarizzazione porterebbe nelle casse dello Stato 1,2 miliardi di euro, tra Irpef e contributi previdenziali. 
-
-Anche per i minori, non esistendo agli occhi dello
-stato, quando spariscono diventa quasi impossibile ritrovarli, rischiando di finire nelle reti dello spaccio e della prostituzione.
-Semplificare la messa in regola degli stranieri, li può sottrarre da una vita pericolosa, importante sia per il
-benessere delle persone e della comunità. 
-
-Infine sul piano sociale, l'immigrazione arricchisce il tessuto culturale, introducendo nuove prospettive e tradizioni che possono rivitalizzare le società. Se all'inizio l'integrazione può presentare ostacoli e generare tensioni, come discusso nello studio "Public attitudes towards migrants: understanding cross‐national and individual differences"\endnote{\raggedright\url{https://pmc.ncbi.nlm.nih.gov/articles/PMC7801858/}}, nel corso del tempo gli immigrati e i loro discendenti tendono ad assimilare la lingua, i valori e le norme del paese ospitante, diventando membri attivi e contributivi della comunità. Non solo, i figli degli immigrati spesso abbracciano ideali progressisti, talvolta influenzando positivamente il panorama politico e contribuendo a plasmare politiche più inclusive e socialmente orientate, come evidenziato in  "Long-term political consequences of immigration: Voting preferences of immigrants’ children in European countries"\endnote{CEPR, 2022 \raggedright\url{https://cepr.org/voxeu/columns/long-term-political-consequences-immigration-voting-preferences-immigrants-children}}.
-
 \begin{mdframed}[linewidth=1pt]
-Il termine "buonismo" viene talvolta utilizzato per descrivere un atteggiamento considerato eccessivamente tollerante, adottato allo scopo di apparire virtuosi. Tuttavia, questo concetto non si applica automaticamente a ogni posizione contraria alla nostra. Chi nasce in un Paese con maggiori risorse e infrastrutture, come l’Italia, parte da condizioni di vantaggio rispetto a chi nasce in contesti più svantaggiati. Questa disparità non è frutto del merito individuale, ma di circostanze casuali. Di conseguenza, sostenere la necessità di pari opportunità non è una questione di buonismo, ma di riconoscimento di una disuguaglianza. L’obiettivo dovrebbe essere quello di garantire condizioni di partenza più eque per tutti.
+Il termine "buonismo" viene talvolta utilizzato per descrivere un atteggiamento considerato eccessivamente tollerante, adottato allo scopo di apparire virtuosi. Tuttavia, questo concetto non si applica automaticamente a ogni posizione contraria alla nostra. Chi nasce in un Paese con maggiori risorse e infrastrutture, parte da condizioni di vantaggio rispetto a chi nasce in contesti più sfortunati. Questa disparità non è frutto del merito individuale, ma di circostanze casuali. Di conseguenza, sostenere la necessità di pari opportunità non è una questione di buonismo, ma di riconoscimento di una disuguaglianza. Non si tratta di dare a tutti le stesse possibilità di arrivo, ma garantire condizioni di partenza più eque per ciascuno.
 \end{mdframed}
+
+
+
+
+
 
 \subsubsection{Wokeism}
 Il termine “wokeism” (in italiano “wokismo”) nasce con un’accezione positiva: descrive la consapevolezza e la sensibilità verso le ingiustizie sociali e politiche, come il razzismo, le discriminazioni di genere e le disuguaglianze sistemiche. Nel tempo, tuttavia, questo concetto si è caricato di sfumature critiche. In certi contesti, viene oggi impiegato per indicare un atteggiamento percepito come eccessivamente radicale, autoreferenziale o divisivo. Si tratta di un’evoluzione semantica significativa, che merita attenzione: movimenti nati con l’intento di promuovere inclusione possono, in alcune loro manifestazioni, finire per enfatizzare le differenze al punto da creare nuove forme di separazione.
@@ -4330,6 +4259,16 @@ Apple, pur beneficiando dall'open source, mantenendo un ecosistema chiuso, non c
 Anche sulla semplicità di utilizzo, molte funzioni sono più rapide e personalizzabili su Android: ad esempio, accedere alle impostazioni del Wi-Fi con una pressione prolungata sul menu a tendina, usare due app in split screen o cambiare app predefinite sono operazioni immediate. iOS, invece, spesso richiede più passaggi o non consente queste opzioni.
 
 Infine, la presunta durabilità superiore dei prodotti Apple non è sempre confermata nella pratica. Molti utenti riportano un degrado della batteria già nel primo anno e un calo di performance dopo gli aggiornamenti software. Anche le statistiche sull’assistenza vedono Apple in svantaggio rispetto alla concorrenza.
+\end{mdframed}
+
+\begin{mdframed}[linewidth=1pt]
+Senza il denaro contante, la corruzione economica diventerebbe più complessa. Le alternative possibili sarebbero principalmente tre:
+
+\begin{itemize}
+\item Criptovalute e valute digitali: se utilizzate in modo anonimo — ad esempio tramite mixer o wallet non soggetti a procedure KYC (Know Your Customer) — possono svolgere un ruolo simile al contante.
+\item Beni di lusso e scambi in natura: oggetti di valore come orologi, automobili, opere d’arte, oppure favori personali come assunzioni, incarichi o altri vantaggi non monetari, possono essere usati per trasferire valore in modo non tracciabile.
+\item Fatture gonfiate e consulenze fittizie: si ricorre a strumenti legali in apparenza, come servizi professionali simulati o costi artificiosamente elevati, per mascherare pagamenti illeciti.
+\end{itemize}
 \end{mdframed}
 
 \subsection{Speranza}
