--- a/Libro.tex
+++ b/Libro.tex
@@ -4163,44 +4163,73 @@ Potremmo infatti non diventare mai ricchi e va bene così al fine del nostro ben
 \item Fare attenzione alle macro-spese come casa e auto.
 \end{itemize}
 
-in Italia un’auto nuova costa mediamente 28.000–30.000 euro \endnote{\raggedright\url{https://pneusnews.it/2025/01/08/record-mercato-auto-2024-oltre-47-miliardi-di-euro-spesi-dagli-italiani-per-comprare-nuove-auto-3-prezzo-medio-a-30-000-euro/}} \endnote{\raggedright\url{https://www.quattroruote.it/news/mercato/2025/01/02/mercato_italiano_spesa_prezzi_2024.html}} \endnote{\raggedright\url{https://www.wallstreetitalia.com/auto-prezzo-medio-in-italia-schizza-a-30-000-euro-43-rispetto-a-prima-del-covid/}}, ma con utilitarie a chilometro zero da meno di 15.000 euro si possono risparmiare circa 15.000 euro ogni 10–11 anni.
-Secondo Revolut (novembre 2023), il 32\% degli italiani risparmia circa 100 euro al mese, pari a 11,5 anni di mensilità. Ripetendo questa scelta su cinque auto nella vita, il risparmio potenziale supera i 75.000 euro: in alcune zone, l’equivalente di una casa.
+Uno standard per capire se ti puoi permettere un auto è la regola 20/4/10. Ovvero, essere in grado di versare subito almeno il 20\% del prezzo in contanti (per coprire la svalutazione immediata appena esci dal concessionario), non fare rate per più di 4 anni e, la spesa totale mensile per l'auto (rata + assicurazione + benzina/bollo) non dovrebbe superare il 10\% del tuo reddito mensile lordo.
+Il crescente costo delle auto, benzina e assicurazione rispetto agli stipendi, rende piuttosto difficile applicare questa regola, ma con una versione "rilassata" di queste linee guida, per semplificare, potremmo dire che l'auto dovrebbe costare meno di 10 stipendi.
+
+Un Italiano guadagna mediamente 1.740€ al mese, rendendo un auto da 27.000€ è al di sopra delle sue possibilità.
+Di seguito possiamo vedere che in Europa solo la Svizzera riesce a fare scelte finanziariamente sostenibili, siccome servono 8,44 mesi di lavoro per comprare un auto. Un Italiano dovrebbe lavorare quasi 16 mesi, ma parte di questi guadagni servono per l'affitto, bollette, spesa ecc… Dovremmo contare i mesi di risparmio. Un Italiano risparmia solo il 3,32\% del suo stipendio, quindi meno di 60€. Va considerato che in questi 60€ sono già state sottratti i vari finanziamenti, tra cui quelli per l'auto, ma ho voluto comunque calcolare quanti mesi di risparmio servirebbero e, sono usciti 476,87 mesi, praticamente 40 anni. 
+Questo dato suggerisce che se un Italiano che segue questa media, comprando auto con prestito, non uscirà mai dal ciclo infinito dei finanziamenti.
 
 \begin{table}[H]
 \centering
-\caption{Confronto costi tra auto economica, media ed elettrica\\
-*ogni 3 anni\\
-**guasti, batteria, freni, ecc.}
+\caption{Credits: \raggedright\url{https://vignetteswitzerland.com/most-and-least-affordable-eu-countries-to-own-a-car-in-2024-revealed/} \raggedright\url{https://www.oecd.org/en/data/indicators/household-savings.html}}
 \begin{tabular}{|l|r|r|r|r|r|r|}
 \hline
-Voce di spesa & \multicolumn{3}{c|}{Costo annuo (€)} & \multicolumn{3}{c|}{Costo totale 10 anni (€)} \\
-\cline{2-7}
- & \begin{tabular}{@{}c@{}}Auto\\economica\end{tabular} & \begin{tabular}{@{}c@{}}Auto\\media\end{tabular} & \begin{tabular}{@{}c@{}}Auto\\elettrica\end{tabular} & \begin{tabular}{@{}c@{}}Auto\\economica\end{tabular} & \begin{tabular}{@{}c@{}}Auto\\media\end{tabular} & \begin{tabular}{@{}c@{}}Auto\\elettrica\end{tabular} \\
+\textbf{Paese} & \begin{tabular}[c]{@{}c@{}}\textbf{Prezzo}\\\textbf{Auto (€)}\end{tabular} & \begin{tabular}[c]{@{}c@{}}\textbf{Salario}\\\textbf{Netto (€)}\end{tabular} & \begin{tabular}[c]{@{}c@{}}\textbf{Tasso}\\\textbf{Risp. (\%)}\end{tabular} & \begin{tabular}[c]{@{}c@{}}\textbf{Risp.}\\\textbf{Mens. (€)}\end{tabular} & \begin{tabular}[c]{@{}c@{}}\textbf{Mesi}\\\textbf{Salario}\end{tabular} & \begin{tabular}[c]{@{}c@{}}\textbf{Mesi}\\\textbf{Risp.}\end{tabular} \\ \hline
+Svizzera & 46.979 & 5.569 & 17,48 & 973,46 & 8,44 & 48,26 \\ \hline
+Irlanda & 46.979 & 3.367 & 6,87 & 231,31 & 13,95 & 203,10 \\ \hline
+Lussemburgo & 39.380 & 3.699 & 5,72 & 211,58 & 10,65 & 186,12 \\ \hline
+Francia & 29.331 & 2.464 & 11,20 & 275,97 & 11,90 & 106,28 \\ \hline
+Spagna & 29.485 & 1.910 & 7,98 & 152,42 & 15,44 & 193,45 \\ \hline
+Paesi Bassi & 36.033 & 3.145 & 7,77 & 244,37 & 11,46 & 147,45 \\ \hline
+Austria & 34.805 & 3.269 & 8,63 & 282,11 & 10,65 & 123,37 \\ \hline
+Danimarca & 42.681 & 4.149 & 9,07 & 376,31 & 10,29 & 113,42 \\ \hline
+Germania & 37.504 & 2.781 & 10,40 & 289,22 & 13,49 & 129,67 \\ \hline
+Italia & 27.548 & 1.740 & 3,32 & 57,77 & 15,83 & 476,87 \\ \hline
+\end{tabular}
+\end{table}
+
+Scenario A: Acquisto di un auto da 27.000€ con 350€ di rata. Dopo 5 anni avrà speso 32.000€ con gli interessi, per un'auto che ora vale 12.000. Saldo netto: -20.000€.
+Scenario B: Acquistando un usato da 5.000€ si potrà risparmiare quei 350€ al mese, che in 5 anni sono 21.000€, più eventualmente la vendita dell'usato.
+Mediamente in Italia si cambia l'auto dopo 10 anni e, in questo scenario, senza finanziamento, si risparmierebbero 42.000€ o 63.000 se la tenessimo 15 anni, che in diverse zone d'Italia possono rappresentare il 50\% del costo di un appartamento.
+
+Nella seguente tabella vengono confrontate auto nuove di varie fasce, che a prima vista possono sembrare più costose rispetto a un’auto usata. Tuttavia, considerando la maggiore longevità e affidabilità nel tempo, il rapporto costi-benefici rende spesso l’auto nuova la scelta economicamente più vantaggiosa.
+Inoltre, trovare alternative al carburante tradizionale, come l’elettrico o l’ibrido, contribuirà ulteriormente a ridurre i costi complessivi di gestione.
+
+\begin{table}[H]
+\centering
+\caption{Confronto costi annui tra auto economica, media ed elettrica\\
+\small *ogni 3 anni | **guasti, batteria, freni, ecc.}
+\begin{tabular}{|l|r|r|r|}
 \hline
-Prezzo acquisto & 14.000 & 28.000 & 32.000 & 14.000 & 28.000 & 32.000 \\
+\textbf{Voce di spesa} & \multicolumn{3}{c|}{\textbf{Costo annuo (€)}} \\
+\cline{2-4}
+ & \textbf{Auto economica} & \textbf{Auto media} & \textbf{Auto elettrica} \\
 \hline
-Carburante & $\sim$1.500 & $\sim$1.800 & $\sim$45 & 15.000 & 18.000 & 450 \\
+Prezzo acquisto & 14.000 & 28.000 & 32.000 \\
 \hline
-Assicurazione & 450 & 700 & 450 & 4.500 & 7.000 & 4.500 \\
+Carburante & $\sim$1.500 & $\sim$1.800 & $\sim$45 \\
 \hline
-Bollo auto & 150 & 300 & 0 & 1.500 & 3.000 & 0 \\
+Assicurazione & 450 & 700 & 450 \\
 \hline
-Tagliandi & 400 & 600 & 150 & 4.000 & 6.000 & 1.500 \\
+Bollo auto & 150 & 300 & 0 \\
 \hline
-Revisione biennale & 80 & 80 & 40 & 400 & 400 & 400 \\
+Tagliandi & 400 & 600 & 150 \\
 \hline
-Cambio gomme* & $\sim$300 & $\sim$450 & 135 & 900 & 1.350 & 1.350 \\
+Revisione biennale & 80 & 80 & 40 \\
 \hline
-Extra** & 300 & 500 & 200 & 3.000 & 5.000 & 2.000 \\
+Cambio gomme* & $\sim$300 & $\sim$450 & 135 \\
+\hline
+Extra** & 300 & 500 & 200 \\
 \hline
 \hline
-\textbf{Totale stimato} & \textbf{4.330} & \textbf{6.875} & \textbf{4.220} & \textbf{43.300} & \textbf{68.750} & \textbf{42.200} \\
+\textbf{Totale stimato} & \textbf{4.330} & \textbf{6.875} & \textbf{4.220} \\
 \hline
 \end{tabular}
 \end{table}
 
-In questa tabella il confronto è stato effettuato tra auto nuove, che a prima vista possono sembrare più costose rispetto a un’auto usata. Tuttavia, considerando la maggiore longevità e affidabilità nel tempo, il rapporto costi-benefici rende spesso l’auto nuova la scelta economicamente più vantaggiosa.
-Inoltre, trovare alternative al carburante tradizionale, come l’elettrico o l’ibrido, contribuirà ulteriormente a ridurre i costi complessivi di gestione.
+Se moltiplicato per 10 anni (durata media del possesso auto), avremo rispettivamente 43.300€, 68.750€ e 42.200€. A fine vita di un auto economica, si avranno in tasca ben 25.450€ senza sforzo, quasi il costo di un auto di fascia media.
+
 \end{mdframed}
 
 \begin{mdframed}[linewidth=1pt]
